src/test/ui/parser/keyword-enum-as-identifier.stderr
error: expected identifier, found keyword `enum`
  --> $DIR/keyword-enum-as-identifier.rs:4:9
   |
LL |     let enum = "foo";
   |         ^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#enum = "foo";
   |         ^^^^^^

error: aborting due to previous error

